--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.menu.jar}
+    ${reference.menu.jar}:\
+    ${libs.LWJGL.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +57,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=menu
+main.class=Tama.menu
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
